--- a/index.html
+++ b/index.html
@@ -19,16 +19,18 @@
         }
 
         :root {
-            --primary: #9945FF;
-            --primary-light: rgba(153, 69, 255, 0.12);
-            --secondary: #14F195;
-            --secondary-light: rgba(20, 241, 149, 0.12);
-            --bg: #0a0a0f;
-            --surface: #13131a;
-            --border: rgba(255, 255, 255, 0.06);
-            --text: #f0f0f5;
-            --text-muted: #8a8a9a;
-            --text-dim: #5a5a6a;
+            --primary: #f21b1b;
+            /* Red */
+            --primary-light: rgba(242, 27, 27, 0.1);
+            --secondary: #000000;
+            --bg: #facd0a;
+            /* Main Yellow Background */
+            --surface: #ffffff;
+            /* White Card */
+            --border: #000000;
+            --text: #000000;
+            --text-muted: #333333;
+            --text-dim: #555555;
         }
 
         body {
